load("@build_bazel_rules_android//android:rules.bzl", "android_library")
load("//:internal/java_8_library.bzl", java_library = "java_8_library")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

java_library(
    name = "alpha",
    srcs = ["Alpha.java"],
)

android_library(
    name = "alpha-android",
    srcs = ["Alpha.java"],
)
