load("@rules_android//android:rules.bzl", "android_library")
load("@rules_java//java:defs.bzl", "java_library")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

java_library(
    name = "alpha",
    srcs = ["Alpha.java"],
)

android_library(
    name = "alpha-android",
    srcs = ["Alpha.java"],
)
