licenses(["notice"])

java_test(
    name = "KeyDerivationConfigTest",
    size = "small",
    srcs = ["KeyDerivationConfigTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:registry_cluster",
        "//src/main/java/com/google/crypto/tink/aead:aead_config",
        "//src/main/java/com/google/crypto/tink/aead:predefined_aead_parameters",
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/keyderivation:key_derivation_config",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_parameters",
        "//src/main/java/com/google/crypto/tink/prf:predefined_prf_parameters",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "KeyDerivationTest",
    size = "small",
    srcs = ["KeyDerivationTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:deterministic_aead",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key_templates",
        "//src/main/java/com/google/crypto/tink:mac",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink:registry_cluster",
        "//src/main/java/com/google/crypto/tink:registry_configuration",
        "//src/main/java/com/google/crypto/tink:tink_json_proto_keyset_format",
        "//src/main/java/com/google/crypto/tink/aead:aead_config",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_config",
        "//src/main/java/com/google/crypto/tink/keyderivation:key_derivation_config",
        "//src/main/java/com/google/crypto/tink/keyderivation:keyset_deriver",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_parameters",
        "//src/main/java/com/google/crypto/tink/mac:mac_config",
        "//src/main/java/com/google/crypto/tink/prf:prf_config",
        "//src/main/java/com/google/crypto/tink/prf:prf_parameters",
        "//src/main/java/com/google/crypto/tink/testing:test_util",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "KeysetDeriverWrapperTest",
    size = "small",
    srcs = ["KeysetDeriverWrapperTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/keyderivation:key_derivation_config",
        "//src/main/java/com/google/crypto/tink/keyderivation:keyset_deriver_wrapper",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "PrfBasedKeyDerivationParametersTest",
    size = "small",
    srcs = ["PrfBasedKeyDerivationParametersTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/aead:x_cha_cha20_poly1305_parameters",
        "//src/main/java/com/google/crypto/tink/internal:tink_bug_exception",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_parameters",
        "//src/main/java/com/google/crypto/tink/mac:hmac_parameters",
        "//src/main/java/com/google/crypto/tink/prf:aes_cmac_prf_parameters",
        "//src/main/java/com/google/crypto/tink/prf:hmac_prf_parameters",
        "//src/main/java/com/google/crypto/tink/prf:prf_parameters",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "PrfBasedKeyDerivationKeyTest",
    size = "small",
    srcs = ["PrfBasedKeyDerivationKeyTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/aead:aes_eax_parameters",
        "//src/main/java/com/google/crypto/tink/internal:key_tester",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_key",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_parameters",
        "//src/main/java/com/google/crypto/tink/prf:hmac_prf_key",
        "//src/main/java/com/google/crypto/tink/prf:hmac_prf_parameters",
        "//src/main/java/com/google/crypto/tink/util:secret_bytes",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "KeysetDeriverConfigurationV0Test",
    size = "small",
    srcs = ["KeysetDeriverConfigurationV0Test.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:registry_cluster",
        "//src/main/java/com/google/crypto/tink:registry_configuration",
        "//src/main/java/com/google/crypto/tink/aead:aes_gcm_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:aes_gcm_parameters",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util",
        "//src/main/java/com/google/crypto/tink/internal:legacy_proto_key",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/keyderivation:keyset_deriver",
        "//src/main/java/com/google/crypto/tink/keyderivation:keyset_deriver_configuration_v0",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_key",
        "//src/main/java/com/google/crypto/tink/keyderivation:prf_based_key_derivation_parameters",
        "//src/main/java/com/google/crypto/tink/keyderivation/internal:prf_based_key_derivation_key_proto_serialization",
        "//src/main/java/com/google/crypto/tink/prf:hkdf_prf_key",
        "//src/main/java/com/google/crypto/tink/prf:hkdf_prf_parameters",
        "//src/main/java/com/google/crypto/tink/prf/internal:hkdf_prf_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:secret_bytes",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
