load("@build_bazel_rules_android//android:rules.bzl", "android_library")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

java_library(
    name = "rsa_kem_hybrid_encrypt",
    srcs = ["RsaKemHybridEncrypt.java"],
    deps = [
        ":rsa_kem",
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aead_factory",
        "//src/main/java/com/google/crypto/tink/subtle:hkdf",
    ],
)

java_library(
    name = "rsa_kem",
    srcs = ["RsaKem.java"],
    deps = ["//src/main/java/com/google/crypto/tink/internal:big_integer_encoding"],
)

java_library(
    name = "rsa_kem_hybrid_decrypt",
    srcs = ["RsaKemHybridDecrypt.java"],
    deps = [
        ":rsa_kem",
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aead_factory",
        "//src/main/java/com/google/crypto/tink/subtle:hkdf",
    ],
)

android_library(
    name = "rsa_kem-android",
    srcs = ["RsaKem.java"],
    deps = ["//src/main/java/com/google/crypto/tink/internal:big_integer_encoding-android"],
)

android_library(
    name = "rsa_kem_hybrid_decrypt-android",
    srcs = ["RsaKemHybridDecrypt.java"],
    deps = [
        ":rsa_kem-android",
        "//src/main/java/com/google/crypto/tink:aead-android",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt-android",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aead_factory-android",
        "//src/main/java/com/google/crypto/tink/subtle:hkdf-android",
    ],
)

android_library(
    name = "rsa_kem_hybrid_encrypt-android",
    srcs = ["RsaKemHybridEncrypt.java"],
    deps = [
        ":rsa_kem-android",
        "//src/main/java/com/google/crypto/tink:aead-android",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt-android",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aead_factory-android",
        "//src/main/java/com/google/crypto/tink/subtle:hkdf-android",
    ],
)
