load("@build_bazel_rules_android//android:rules.bzl", "android_library")

licenses(["notice"])

package(
    default_testonly = 1,
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "fake_monitoring_client",
    srcs = ["FakeMonitoringClient.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/internal:keyset_handle_interface",
        "//src/main/java/com/google/crypto/tink/internal:monitoring_annotations",
        "//src/main/java/com/google/crypto/tink/internal:monitoring_client",
    ],
)

android_library(
    name = "fake_monitoring_client-android",
    srcs = ["FakeMonitoringClient.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/internal:keyset_handle_interface-android",
        "//src/main/java/com/google/crypto/tink/internal:monitoring_annotations-android",
        "//src/main/java/com/google/crypto/tink/internal:monitoring_client-android",
    ],
)

java_library(
    name = "parameters_with_serialization",
    srcs = ["ParametersWithSerialization.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
    ],
)

android_library(
    name = "parameters_with_serialization-android",
    srcs = ["ParametersWithSerialization.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:parameters-android",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization-android",
    ],
)

java_library(
    name = "key_with_serialization",
    srcs = ["KeyWithSerialization.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
    ],
)

android_library(
    name = "key_with_serialization-android",
    srcs = ["KeyWithSerialization.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:key-android",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization-android",
    ],
)

java_library(
    name = "asserts",
    srcs = ["Asserts.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
    ],
)

android_library(
    name = "asserts-android",
    srcs = ["Asserts.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization-android",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization-android",
        "@maven//:com_google_protobuf_protobuf_javalite",
        "@maven//:com_google_truth_truth",
    ],
)

android_library(
    name = "big_integer_test_util-android",
    srcs = ["BigIntegerTestUtil.java"],
)

java_library(
    name = "big_integer_test_util",
    srcs = ["BigIntegerTestUtil.java"],
)

java_library(
    name = "build_dispatched_test_code",
    srcs = ["BuildDispatchedTestCode.java"],
)

java_library(
    name = "test_files",
    srcs = ["TestFiles.java"],
    deps = [":build_dispatched_test_code"],
)

android_library(
    name = "test_files-android",
    srcs = ["TestFiles.java"],
    deps = ["//src_android/main/java/com/google/crypto/tink/internal/testing:build_dispatched_test_code-android"],
)

android_library(
    name = "set_tink_flag-android",
    srcs = ["SetTinkFlag.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/config:tink_flag-android",
        "//src_android/main/java/com/google/crypto/tink/internal/testing:build_dispatched_test_code-android",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "set_tink_flag",
    srcs = ["SetTinkFlag.java"],
    deps = [
        ":build_dispatched_test_code",
        "//src/main/java/com/google/crypto/tink/config:tink_flag",
        "@maven//:junit_junit",
    ],
)
